--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
     sdk: flutter
   
   english_words: ^3.1.5
+  flutter_auth_buttons: ^0.10.0
+  google_sign_in: ^4.5.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
