adding changenotifierprovider for managing user model state

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^3.2.0
   
   english_words: ^3.1.5
   flutter_auth_buttons: ^0.10.0
   google_sign_in: ^4.5.3
+  http: ^0.12.2
 
 
 
