--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^3.2.0
+  after_init: ^0.1.2
   
   english_words: ^3.1.5
   flutter_auth_buttons: ^0.10.0
