--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   provider: ^3.2.0
   after_init: ^0.1.2
+  path_provider: ^1.6.16
   
   english_words: ^3.1.5
   flutter_auth_buttons: ^0.10.0
